<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:orientation="vertical"
   	android:background="#FFFFFF" >
        
    <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textViewBillAmount"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="25dp"
	        android:gravity="center"
	        android:text="@string/billAmountText" />
	
	    <EditText
	        android:id="@+id/editTextBillAmount"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:gravity="center"
	        android:inputType="number" >
		
	        <requestFocus android:layout_width="wrap_content" />
	
	    </EditText>
	
	    <TextView
	        android:id="@+id/textViewTipPercentage"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="25dp"
	        android:gravity="center"
	        android:text="@string/tipPercentageText" />
	
	    <Spinner
	        android:id="@+id/spinner1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	
	    <Button
	        android:id="@+id/calculateButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="30dp"
	        android:text="@string/calculate" />
		
	    <TextView
	        android:id="@+id/result"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="10dp"
	        android:text="@string/tipResult"
	        android:textColor="#000000"
	        android:textSize="20dp" />

	</LinearLayout>
</ScrollView>