<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="#FFFFFF"
       >

	
	
	<LinearLayout
	    android:id="@+id/header"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="5"
	    android:orientation="horizontal"
	    android:layout_alignParentTop="true"
	    android:focusable="true" android:focusableInTouchMode="true" >
	

	       <EditText
	           android:id="@+id/addToDoItem"
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="4"
	           android:hint="@string/typeToDoToAdd"
	           android:inputType="text"
	           android:layout_margin="5dp"
	           android:textColor="#000000"
	           android:maxLength="300" >
	       </EditText>
	
	
	       <Button
	           android:id="@+id/button1"
	           android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
	           android:layout_weight="1"
			   android:layout_margin="5dp"
	           android:text="@string/addButtonText" />
	
	</LinearLayout>
	
	      <ListView
	          android:id="@+id/listView1"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:background="@drawable/blueroundshape"
	          android:cacheColorHint="#00000000"
	          android:layout_marginBottom="70dp"
	          android:layout_below="@id/header">
	      </ListView>
	
	<LinearLayout
	    android:id="@+id/infoButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_alignParentBottom="true"
	    android:focusable="true" android:focusableInTouchMode="true" >
	      
	      <Button
	          android:id="@+id/todoUsageButton"
	          style="?android:attr/buttonStyleSmall"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/todoUsage" />
	      
	      <TextView
	          android:id="@+id/footer"
	          android:layout_width="match_parent"
	          android:layout_height="30dp"
			  android:gravity="center"
			  android:textSize="16sp"
	          android:background="@drawable/greyroundshape"
	          android:textColor="#E0E0E0"
	          android:text="@string/footerText" />

	 </LinearLayout>
	      	
</RelativeLayout>
